fix: edit scene + settings project

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9043F4894AE2E51B384881A79D76CE4C
-ProjectName=Third Person BP Game Template
+ProjectName=TwoSouls
+Description=Rogue-like
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
