--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=TwoSouls
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level1.Level1
+EditorStartupMap=/Game/Maps/Main_Menu.Main_Menu
 GameDefaultMap=/Game/Maps/Main_Menu.Main_Menu
 TransitionMap=
 bUseSplitscreen=True
