--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/Blueprints/GameModeRoom.GameModeRoom_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/Blueprints/Player/BP_GameInstance.BP_GameInstance_C
+GameInstanceClass=/Game/Blueprints/GI_Player.GI_Player_C
 ServerDefaultMap=/Game/Maps/Main_Menu.Main_Menu
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
