--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -125,7 +125,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Shot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="EquipSword",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Ampersand)
 +ActionMappings=(ActionName="EquipGun",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E_AccentAigu)
-+ActionMappings=(ActionName="Revive",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="FireBall",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Quote)
++ActionMappings=(ActionName="Heal",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Apostrophe)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
